src/routes/styles.css
/* Reset CSS for Svelte App */

/* Box sizing rules */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* Remove default padding */
ul[class],
ol[class] {
	padding: 0;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
ul[class],
ol[class],
li,
figure,
figcaption,
blockquote,
dl,
dd {
	margin: 0;
}

/* Set core body defaults */
body {
	min-height: 100vh;
	scroll-behavior: smooth;
	text-rendering: optimizeSpeed;
	line-height: 1.5;
}

/* Remove list styles on ul, ol elements with a class attribute */
ul[class],
ol[class] {
	list-style: none;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
	text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img {
	max-width: 100%;
	display: block;
}

/* Natural flow and rhythm in articles by default */
article>*+* {
	margin-top: 1em;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
	font: inherit;
}

/* Remove all animations and transitions for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
	* {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		scroll-behavior: auto !important;
	}
}


:root {
	--font-body: monospace;
	--color-text: rgba(0, 0, 0, 0.7);
	--color-theme-1: rgba(128, 128, 128, 0.3);
	--color-theme-2: rgba(255, 215, 0, 0.8);
	--color-theme-3: rgba(255, 165, 0, 0.8);
	--color-theme-4: rgba(0, 128, 128, 0.8);
	--color-theme-5: rgba(128, 0, 128, 0.8);
	--color-lightgray: rgba(211, 211, 211, 0.4);
	--color-electric-green: rgba(0, 255, 0, 0.9);
	--color-faint-yellow: rgba(255, 255, 128, 0.8);
	--color-theme-red: rgba(255, 0, 0, 0.8);


	font-family: var(--font-body);
	color: var(--color-text);
}


body {
	/* font-family: Arial, sans-serif; */
	font-family: 'Courier New', monospace;
	margin: 0 2rem 2rem;
	line-height: 1.6;
	background-color: #f9f9f9;
	color: #333;
	overflow: auto;
	position: relative; /* to align the halftone wave in the background */
}

.app .resume {
	column-count: 3;
	column-gap: 40px;
}

@media (max-width: 1200px) { /* tablet */
	.app .resume {
		column-count: 2;
	}
}
@media (max-width: 800px) { /* tablet */
	.app .resume {
		column-count: 1;
	}
}

footer {
	column-span: all;
	margin-top: 2rem;
	text-align: center;
}
header img {
	width: 165px;
	height: 165px;
	border-radius: 50%;
	border: 5px solid lightgray;
}
h1,
h2 {
	color: #333;
}
h2 {
	font-size: 1.2em;
	margin-bottom: 10px;
	border-bottom: 1px solid white;
}
ul {
	list-style: none;
	padding-left: 0;
}

.footer-container {
    display: inline-block;
    margin: 0 auto;
    background-color: rgba(255,255,255,0.8);
    padding: 0.8rem;
    border-radius: 3px;
    margin-bottom: 1rem;
	margin-top: 2rem;
    border: 1px solid rgba(0,0,0,0.4);
}

body.pdf-generation .footer-container,
body.pdf-generation .lightning
 {
	display: none !important;
}

